--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "url": "https://github.com/shahtuyakov/nodejs_learning/issues"
   },
   "homepage": "https://github.com/shahtuyakov/nodejs_learning#readme",
-  "dependencies": {
-    "lodash": "^4.17.21"
-  },
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "bootstrap": "^5.0.1",
+    "lodash": "^4.17.21"
   }
 }
