--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,6 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "bootstrap": "^5.0.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21" 
   }
 }
